{
    "name": "PlayerInputMaps",
    "maps": [
        {
            "name": "PlayerTouch",
            "id": "fb08f9ed-d6a6-4dc7-b5a4-2dfca5512c75",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "2aa56102-949e-460c-9905-0c736c9cee37",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FirstTouch",
                    "type": "PassThrough",
                    "id": "3e90011a-1220-41c3-a4c5-1510d89d2b39",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchHolding",
                    "type": "Button",
                    "id": "c850efc4-be13-40d5-884d-ff5bb343e5aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "31d434e3-8b6b-4583-85a7-c13abba61a33",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d642ee4f-b221-46dd-8980-d69299bbec02",
                    "path": "<Touchscreen>/primaryTouch/startPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afc82d68-a5d1-44d6-a33c-20fe5f0ab6e4",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchHolding",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}